--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,275 +1,5 @@
 @import "./mixins.scss";
-@import "./varibles.scss";
-///////////////////шрифты//////////////////////////
-@font-face {
-	font-family: "GT Walsheim Pro";
-	src: url("../assets/fonts/GTWalsheimPro-Medium.eot");
-	src: local("../assets/fonts/GT Walsheim Pro Medium"),
-		local("../assets/fonts/GTWalsheimPro-Medium"),
-		url("../assets/fonts/GTWalsheimPro-Medium.eot?#iefix")
-			format("embedded-opentype"),
-		url("../assets/fonts/GTWalsheimPro-Medium.woff2") format("woff2"),
-		url("../assets/fonts/GTWalsheimPro-Medium.woff") format("woff"),
-		url("../assets/fonts/GTWalsheimPro-Medium.ttf") format("truetype");
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: "Inter";
-	src: url("../assets/fonts/Inter-Regular.eot");
-	src: local("../assets/fonts/Inter Regular"),
-		local("../assets/fonts/Inter-Regular"),
-		url("../assets/fonts/Inter-Regular.eot?#iefix") format("embedded-opentype"),
-		url("../assets/fonts/Inter-Regular.woff2") format("woff2"),
-		url("../assets/fonts/Inter-Regular.woff") format("woff"),
-		url("../assets/fonts/Inter-Regular.ttf") format("truetype");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: "Inter";
-	src: url("../assets/fonts/Inter-Medium.eot");
-	src: local("../assets/fonts/Inter Medium"),
-		local("../assets/fonts/Inter-Medium"),
-		url("../assets/fonts/Inter-Medium.eot?#iefix") format("embedded-opentype"),
-		url("../assets/fonts/Inter-Medium.woff2") format("woff2"),
-		url("../assets/fonts/Inter-Medium.woff") format("woff"),
-		url("../assets/fonts/Inter-Medium.ttf") format("truetype");
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: "Inter";
-	src: url("../assets/fonts/Inter-SemiBold.eot");
-	src: local("../assets/fonts/Inter Semi Bold"),
-		local("../assets/fonts/Inter-SemiBold"),
-		url("../assets/fonts/Inter-SemiBold.eot?#iefix") format("embedded-opentype"),
-		url("../assets/fonts/Inter-SemiBold.woff2") format("woff2"),
-		url("../assets/fonts/Inter-SemiBold.woff") format("woff"),
-		url("../assets/fonts/Inter-SemiBold.ttf") format("truetype");
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: "Inter";
-	src: url("../assets/fonts/Inter-Bold.eot");
-	src: local("../assets/fonts/Inter Bold"), local("../assets/fonts/Inter-Bold"),
-		url("../assets/fonts/Inter-Bold.eot?#iefix") format("embedded-opentype"),
-		url("../assets/fonts/Inter-Bold.woff2") format("woff2"),
-		url("../assets/fonts/Inter-Bold.woff") format("woff"),
-		url("../assets/fonts/Inter-Bold.ttf") format("truetype");
-	font-weight: 700;
-	font-style: normal;
-}
-
-//////////////////////////цвета//////////////////////////
-
-:root {
-	--white: #fff;
-	--linear-green: linear-gradient(141deg, #1dd844 0%, #cbf62e 100%);
-	--linear-puprle: linear-gradient(
-		171deg,
-		rgba(95, 56, 255, 0.25) 0%,
-		rgba(255, 14, 222, 0.25) 100%
-	);
-	--linear-background: linear-gradient(203deg, #323e51 0%, #1d2532 100%);
-	--card-background: rgba(51, 62, 81, 0.7);
-	--background: #1d2532;
-	--dark: #293344;
-	--light-green: #c3f33b;
-	--text-grey: #cecece;
-	--input-grey: #757575;
-	--button-text: #242424;
-}
-
-////////////////////////обнуление/////////////////////////////////
-*,
-*::before,
-*::after {
-	box-sizing: border-box;
-	-webkit-tap-highlight-color: transparent;
-	hyphens: auto;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	min-height: 100vh;
-	scroll-behavior: smooth;
-	text-rendering: optimizeSpeed;
-	position: relative;
-
-	&::after {
-		content: "";
-		width: 414.902px;
-		height: 414.902px;
-		transform: rotate(11.969deg);
-		border-radius: 414.902px;
-		background: var(--linear-puprle);
-		filter: blur(86px);
-		position: absolute;
-		top: 0;
-		left: 0;
-		z-index: 1;
-	}
-}
-
-ul,
-ol {
-	list-style: none;
-}
-
-a:not([class]) {
-	text-decoration-skip-ink: auto;
-}
-
-img {
-	max-width: 100%;
-	display: block;
-}
-
-input,
-button,
-textarea,
-select {
-	font: inherit;
-}
-
-input[type="number"] {
-	-moz-appearance: textfield;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-}
-
-///////UI-Kit//////////////////////
-
-.container {
-	max-width: $desc;
-	margin: 0 auto;
-	padding: 0 20px;
-
-	@media (max-width: $mob) {
-		max-width: var($mob);
-		padding: 0 16px;
-	}
-}
-
-.h1 {
-	font-family: Inter;
-	font-size: px-to-em(72);
-	font-style: normal;
-	font-weight: 400;
-	line-height: 105%;
-	letter-spacing: -2.16px;
-
-	& .bold {
-		font-weight: 700;
-		font-size: inherit;
-		line-height: inherit;
-		color: inherit;
-		font-style: inherit;
-		letter-spacing: inherit;
-	}
-
-	@media (max-width: $mob) {
-		font-size: px-to-em(25);
-		line-height: 105%;
-		letter-spacing: -0.75px;
-	}
-}
-
-.h2 {
-	font-family: Inter;
-	font-size: px-to-em(45);
-	font-style: normal;
-	font-weight: 600;
-	line-height: 130%;
-
-	@media (max-width: var($mob)) {
-		font-size: px-to-em(23);
-	}
-}
-
-.text-primary {
-	font-family: Inter;
-	font-size: px-to-em(23);
-	font-style: normal;
-	font-weight: 400;
-	line-height: 120%;
-	text-decoration: none;
-
-	@media (max-width: $mob) {
-		font-size: px-to-em(18);
-	}
-}
-
-.text-card {
-	font-family: Inter;
-	font-size: px-to-em(19);
-	font-style: normal;
-	font-weight: 400;
-	line-height: px-to-per(25, 19);
-	letter-spacing: -0.7px;
-
-	@media (max-width: $mob) {
-		font-size: px-to-em(16);
-		line-height: px-to-per(25, 16);
-	}
-}
-
-.modal-title {
-	font-family: Inter;
-	font-size: px-to-em(45);
-	font-style: normal;
-	font-weight: 700;
-	line-height: 105%;
-	letter-spacing: -1.35px;
-}
-
-.modal-text {
-	font-family: Inter;
-	font-size: px-to-em(21);
-	font-style: normal;
-	font-weight: 400;
-	line-height: 120%;
-}
-
-.input {
-	background-color: var(--white);
-	padding: 15px 20px;
-	border-radius: 10px;
-	color: var(--input-grey);
-	font-family: Inter;
-	font-size: px-to-em(18);
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-	width: 100%;
-}
-
-// .dark-background {
-// 	background-color: var(--background);
-// 	position: relative;
-// 	overflow: hidden;
-
-// 	&__abs {
-// 		width: 414.902px;
-// 		height: 414.902px;
-// 		transform: rotate(11.969deg);
-// 		border-radius: 414.902px;
-// 		background: var(--linear-puprle);
-// 		filter: blur(86px);
-// 		position: absolute;
-// 		top: 0;
-// 		left: 0;
-// 		z-index: 1;
-// 	}
-
-// 	&__content {
-// 		position: relative;
-// 		z-index: 2;
-// 	}
-// }
+@import "./fonts.scss";
+@import "./variables.scss";
+@import "./normalize.scss";
+@import "./UI-Kit.scss";
