--- a/src/components/ButtonPrimary/ButtonPrimary.module.scss
+++ b/src/components/ButtonPrimary/ButtonPrimary.module.scss
@@ -1,4 +1,5 @@
 @import "../../scss/mixins.scss";
+@import "../../scss/variables.scss";
 .ButtonPrimory {
 	display: flex;
 	flex-direction: column;
@@ -17,4 +18,10 @@
 	font-weight: 500;
 	line-height: 130%;
 	cursor: pointer;
+
+	@media (max-width: $mob) {
+		font-size: px-to-em(16);
+		padding: 15px 0;
+		border-radius: 15px;
+	}
 }
