--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,3 +1,4 @@
+@import "../../scss/variables.scss";
 .Header {
 	display: block;
 	background-color: var(--background);
@@ -5,8 +6,10 @@
 	&__container {
 		padding-top: 30px;
 		padding-bottom: 30px;
+		position: relative;
+		z-index: 2;
 
-		@media (max-width: --mob) {
+		@media (max-width: $mob) {
 			padding-top: 20px;
 			padding-bottom: 20px;
 		}
@@ -21,6 +24,14 @@
 	&__logo {
 		display: block;
 		text-decoration: none;
+
+		svg {
+			width: 100%;
+		}
+
+		@media (max-width: $mob) {
+			max-width: 89px;
+		}
 	}
 
 	&__controls {
@@ -28,9 +39,86 @@
 		align-items: center;
 		justify-content: space-between;
 		flex: 0 0 736px;
+
+		@media (max-width: 1365px) {
+			flex: 0 0 640px;
+		}
+
+		@media (max-width: 999px) {
+			flex: 0 0 550px;
+		}
+
+		@media (max-width: $mob) {
+			display: none;
+		}
 	}
 
 	&__button {
 		flex: 0 0 175px;
+	}
+
+	&__burger {
+		display: none;
+		border: none;
+		flex: 0 0 40px;
+		height: 16px;
+		background: transparent;
+		position: relative;
+		cursor: pointer;
+
+		@media (max-width: $mob) {
+			display: block;
+		}
+
+		&.open .Header__burger_item {
+			&:after {
+				top: 0px;
+				transform: rotate(45deg);
+				transition: top 300ms,
+					transform 300ms 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+			}
+			&:before {
+				bottom: 0;
+				transform: rotate(-45deg);
+				transition: bottom 300ms,
+					transform 300ms 300ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+			}
+		}
+	}
+
+	&__burger_item {
+		transition: 0.3s;
+		width: 100%;
+		height: 3px;
+		border-radius: 10px;
+		background-color: transparent;
+		position: absolute;
+		top: 50%;
+		left: 0;
+		transform: translateY(-50%);
+		&:after {
+			transition: top 300ms 300ms,
+				transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+			content: "";
+			width: 100%;
+			height: 3px;
+			background-color: var(--white);
+			position: absolute;
+			top: -5px;
+			left: 0;
+			border-radius: 10px;
+		}
+		&:before {
+			transition: bottom 300ms 300ms,
+				transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+			content: "";
+			width: 100%;
+			height: 3px;
+			background-color: var(--white);
+			position: absolute;
+			bottom: -5px;
+			left: 0;
+			border-radius: 10px;
+		}
 	}
 }
