--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,32 @@
 @import "./mixins.scss";
 @import "./fonts.scss";
 @import "./variables.scss";
+@import "./colors.scss";
 @import "./normalize.scss";
 @import "./UI-Kit.scss";
+
+body::after {
+	content: "";
+	width: 414.902px;
+	height: 414.902px;
+	transform: rotate(11.969deg);
+	border-radius: 414.902px;
+	background: var(--linear-puprle);
+	filter: blur(86px);
+	position: absolute;
+	top: -95px;
+	left: 50px;
+	z-index: 1;
+
+	@media (max-width: 1365px) {
+		width: 238px;
+		height: 238px;
+		left: -60px;
+		top: -60px;
+	}
+}
+
+main.main {
+	display: block;
+	margin-top: -1px;
+}
