--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -23,7 +23,7 @@
 		}
 
 		@media (max-width: $mob) {
-			padding-top: 28px;
+			padding-top: 17px;
 			padding-bottom: 50px;
 		}
 	}
@@ -60,6 +60,10 @@
 			margin-top: 16px;
 			max-width: 80%;
 		}
+
+		@media (max-width: $mob) {
+			max-width: 100%;
+		}
 	}
 
 	&__man {
@@ -74,6 +78,10 @@
 		@media (max-width: 1365px) {
 			text-align: center;
 		}
+
+		@media (max-width: 321px) {
+			max-width: 248px;
+		}
 	}
 
 	&__text {
@@ -82,7 +90,7 @@
 		margin-top: 32px;
 
 		@media (max-width: 1365px) {
-			margin-top: 11px;
+			margin-top: 40px;
 			max-width: 100%;
 			text-align: center;
 		}
