--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,3 +1,4 @@
+@import "../../scss/variables.scss";
 .Modal {
 	opacity: 0;
 	visibility: hidden;
@@ -48,8 +49,18 @@
 			transform: rotate(11.969deg);
 			display: block;
 			position: absolute;
-			top: -70px;
-			right: -125px;
+			top: 103px;
+			right: -103px;
+
+			@media (max-width: $mob) {
+				width: 287.901px;
+				height: 261.679px;
+				border-radius: 287.901px;
+			}
+		}
+
+		@media (max-width: $mob) {
+			padding: 45px 16px 41px;
 		}
 	}
 
@@ -67,6 +78,13 @@
 		top: 34px;
 		right: 41px;
 		cursor: pointer;
+
+		@media (max-width: $mob) {
+			top: 16px;
+			right: 16px;
+			width: 34px;
+			height: 34px;
+		}
 	}
 
 	&__content {
@@ -81,6 +99,14 @@
 		display: flex;
 		flex-direction: column;
 		gap: 25px;
+
+		@media (max-width: $mob) {
+			gap: 15px;
+		}
+
+		@media (max-width: 321px) {
+			max-width: 273px;
+		}
 	}
 
 	&__title,
@@ -92,5 +118,9 @@
 		display: flex;
 		flex-direction: column;
 		gap: 18px;
+	}
+
+	&__input {
+		display: block;
 	}
 }
