--- a/src/components/Benifits/Benefits.module.scss
+++ b/src/components/Benifits/Benefits.module.scss
@@ -9,17 +9,17 @@
 		padding-bottom: 190px;
 		position: relative;
 
-		@media (max-width: 1600px) {
+		@media (max-width: $adaptiv-1) {
 			padding-top: 110px;
 			padding-bottom: 110px;
 		}
 
-		@media (max-width: 1365px) {
+		@media (max-width: $adaptiv-2) {
 			padding-top: 90px;
 			padding-bottom: 90px;
 		}
 
-		@media (max-width: 999px) {
+		@media (max-width: $adaptiv-3) {
 			padding-top: 70px;
 			padding-bottom: 70px;
 		}
@@ -39,12 +39,12 @@
 			position: absolute;
 			border-radius: 50%;
 
-			@media (max-width: 1365px) {
+			@media (max-width: $adaptiv-2) {
 				top: 20px;
 				right: 60px;
 			}
 
-			@media (max-width: 999px) {
+			@media (max-width: $adaptiv-3) {
 				width: 121px;
 				height: 121px;
 				top: 10px;
@@ -67,7 +67,7 @@
 		width: 100%;
 		position: relative;
 
-		@media (max-width: 1365px) {
+		@media (max-width: $adaptiv-2) {
 			padding-top: 80px;
 			padding-bottom: 130px;
 		}
@@ -88,7 +88,7 @@
 			position: absolute;
 			z-index: 1;
 
-			@media (max-width: 1365px) {
+			@media (max-width: $adaptiv-2) {
 				width: 238px;
 				height: 238px;
 			}
@@ -103,7 +103,7 @@
 			bottom: 0;
 			left: 0;
 
-			@media (max-width: 1365px) {
+			@media (max-width: $adaptiv-2) {
 				bottom: -20px;
 				left: 40px;
 			}
@@ -117,7 +117,7 @@
 			top: 0;
 			right: 0;
 
-			@media (max-width: 1365px) {
+			@media (max-width: $adaptiv-2) {
 				top: 20px;
 				right: -60px;
 			}
@@ -158,11 +158,11 @@
 			top: -22px;
 			left: 170px;
 
-			@media (max-width: 1365px) {
+			@media (max-width: $adaptiv-2) {
 				left: 40px;
 			}
 
-			@media (max-width: 999px) {
+			@media (max-width: $adaptiv-3) {
 				width: 65px;
 				height: 65px;
 				left: 16px;
@@ -190,14 +190,14 @@
 			bottom: -17px;
 			right: 140px;
 
-			@media (max-width: 1365px) {
+			@media (max-width: $adaptiv-2) {
 				width: 111px;
 				height: 111px;
 				bottom: -40px;
 				right: 30px;
 			}
 
-			@media (max-width: 999px) {
+			@media (max-width: $adaptiv-3) {
 				width: 90px;
 				height: 90px;
 				bottom: -120px;
@@ -235,7 +235,7 @@
 
 	&__card {
 		flex: 0 0 calc(53% - 50px);
-		height: 310px;
+		min-height: 310px;
 
 		&:nth-child(2),
 		&:nth-child(3) {
@@ -263,7 +263,7 @@
 
 		@media (max-width: $mob) {
 			flex: 0 0 auto;
-			height: 273px;
+			min-height: 273px;
 
 			&:nth-child(1) {
 				order: 1;
