--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -10,7 +10,7 @@
 	background: var(--card-background);
 	backdrop-filter: blur(30.5px);
 	z-index: 2;
-	height: 100%;
+	min-height: inherit;
 	width: 100%;
 	padding: 20px;
 
