--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,36 @@
 @import "../../scss/variables.scss";
+@import "../../scss/mixins.scss";
 .Header {
 	display: block;
 	background-color: var(--background);
 
+	@media (max-width: $mob) {
+		&.active {
+			position: fixed;
+			top: 0;
+			right: 0;
+			width: 100%;
+			height: 100%;
+			background: var(--modal-backdrop);
+			backdrop-filter: blur(7.5px);
+			z-index: 6;
+
+			.Header__container {
+				width: calc(100% - 16px);
+				padding: 20px 16px 60px 18px;
+				background: var(--dark);
+				margin: 0 0 0 auto;
+				border-radius: 0px 0px 0px 30px;
+				min-height: 392px;
+			}
+
+			.Header__controls {
+				position: absolute;
+				display: flex;
+				top: 100%;
+			}
+		}
+	}
 	&__container {
 		padding-top: 30px;
 		padding-bottom: 30px;
@@ -19,6 +47,10 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+
+		@media (max-width: $mob) {
+			position: relative;
+		}
 	}
 
 	&__logo {
@@ -40,21 +72,32 @@
 		justify-content: space-between;
 		flex: 0 0 736px;
 
-		@media (max-width: 1365px) {
+		@media (max-width: $adaptiv-2) {
 			flex: 0 0 640px;
 		}
 
-		@media (max-width: 999px) {
+		@media (max-width: $adaptiv-3) {
 			flex: 0 0 550px;
 		}
 
 		@media (max-width: $mob) {
+			flex: 0 0 auto;
+			flex-direction: column;
+			gap: 90px;
+			align-items: flex-start;
 			display: none;
+			padding-top: 41px;
 		}
 	}
 
 	&__button {
 		flex: 0 0 175px;
+
+		@media (max-width: $mob) {
+			flex: 0 0 auto;
+			max-width: 175px;
+			width: 100%;
+		}
 	}
 
 	&__burger {
@@ -71,6 +114,8 @@
 		}
 
 		&.open .Header__burger_item {
+			width: 83%;
+			transform: translate(-1px, -4px);
 			&:after {
 				top: 0px;
 				transform: rotate(45deg);
