--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -7,17 +7,17 @@
 		padding-top: 189px;
 		padding-bottom: 270px;
 
-		@media (max-width: 1600px) {
+		@media (max-width: $adaptiv-1) {
 			padding-top: 90px;
 			padding-bottom: 100px;
 		}
 
-		@media (max-width: 1365px) {
+		@media (max-width: $adaptiv-2) {
 			padding-top: 80px;
 			padding-bottom: 80px;
 		}
 
-		@media (max-width: 999px) {
+		@media (max-width: $adaptiv-3) {
 			padding-top: 60px;
 			padding-bottom: 60px;
 		}
@@ -34,7 +34,7 @@
 		position: relative;
 		z-index: 2;
 
-		@media (max-width: 1365px) {
+		@media (max-width: $adaptiv-2) {
 			align-items: center;
 		}
 
@@ -49,13 +49,13 @@
 		right: -104px;
 		max-width: 925px;
 
-		@media (max-width: 1600px) {
+		@media (max-width: $adaptiv-1) {
 			max-width: 50%;
 			right: 60px;
 			top: -85px;
 		}
 
-		@media (max-width: 1365px) {
+		@media (max-width: $adaptiv-2) {
 			position: static;
 			margin-top: 16px;
 			max-width: 80%;
@@ -75,11 +75,11 @@
 		color: var(--white);
 		max-width: 717px;
 
-		@media (max-width: 1365px) {
+		@media (max-width: $adaptiv-2) {
 			text-align: center;
 		}
 
-		@media (max-width: 321px) {
+		@media (max-width: $adaptiv-4) {
 			max-width: 248px;
 		}
 	}
